2002-01-12  Alexander Larsson  <alla@lysator.liu.se>

	* pager.c:
	Hook up more preferences.	

	* pager.glade:
	Set id of help and done button.

2002-01-12  Alexander Larsson  <alla@lysator.liu.se>

	* Makefile.am:
	Add gladefile and schemas file for pager.

	* pager.c:
	First cut at the properties dialog.

	* pager.glade:
	* pager.schemas:
	New files.

Fri,  4 Jan 2002 22:28:51 -0500  Frank Belew <frb@ximian.com>

        * Makefile.am: remove -I$(includedir), bad things happen when
          prefix is the same as gnome1 and that gets added so early on the
          list

2002-01-02  Kevin Vandersloot <kfv101@psu.edu>

	* mailcheck.c: initial port to new api.

	* GNOME_GenUtil....server.in.in:
	* main.c:
	Add mailcheck applet to these

2001-12-17  Mark McLoughlin  <mark@skynet.ie>

	* clock.c: (fill_clock_applet):
	* clock.h:
	* main.c: (genutil_factory):
	* pager.c: (fill_pager_applet):
	* pager.h:
	* tasklist.c: (fill_tasklist_applet):
	* tasklist.h:
	update for panel-applet api changes.

2001-12-17  Mark McLoughlin  <mark@skynet.ie>

	* ChangeLog: copied from .. preserving history.

2001-12-14  Alex Larsson  <alexl@redhat.com>

	* gen_util/tasklist.c (applet_change_background):
	Handle background changes. This doesn't change the color of the
	buttons right now, since we would need the whole style for that.
	But it does handle the part of the tasklist that is empty when
	all the buttons fit on the tasklist.

2001-12-14  Alex Larsson  <alexl@redhat.com>

	* gen_util/clock.c:
	Handle background color changes.

2001-12-14  Mark McLoughlin  <mark@skynet.ie>

	* gen_util/clock.c: update for panel-applet
          GNOME_Vertigo namespace changes.

2001-12-08  Richard Hult  <rhult@codefactory.se>

	* gen_util/clock.c (computer_clock_update_func): Convert time/date
	string to utf-8 before setting the label text.

2001-12-04  Alex Larsson  <alexl@redhat.com>

	* gen_util/GNOME_GenUtilApplet_Factory.server.in.in:
	* gen_util/tasklist.[ch]:
	* applets/gen_util/Makefile.am: