@@ -243,7 +243,7 @@
                         <property name="visible">yes</property>
 
                         <child>
-                          <widget class="GtkTreeView" id="workspace_tree_view">
+                          <widget class="GtkTreeView" id="workspaces_tree_view">
                             <property name="can_focus">yes</property>
                             <property name="headers-visible">no</property>
                             <property name="rules_hint">yes</property>
@@ -299,7 +299,7 @@
                         </child>
 
                         <child>
-                          <widget class="GtkSpinButton" id="num_workspaces_toggle">
+                          <widget class="GtkSpinButton" id="num_workspaces_spin">
                             <property name="can_focus">yes</property>
                             <property name="climb_rate">1</property>
                             <property name="digits">0</property>
