@@ -1,3 +1,10 @@
+2002-01-13  Alexander Larsson  <alla@lysator.liu.se>
+
+	* pager.c:
+	* pager.glade:
+	Hook up the workspaces part of the properties dialog.
+	This needs some loving in gnome-settings-daemon to work.
+
 2002-01-12  Alexander Larsson  <alla@lysator.liu.se>
 
 	* pager.c:
